--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -23,7 +23,7 @@ modules:
         - atim/starship
     install:
       packages:
-        - micro
+        - nano
         - starship
     remove:
       packages:
