--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -43,6 +43,7 @@ modules:
         install: # system flatpaks we want all users to have and not remove
           - org.mozilla.firefox
           - org.gnome.Loupe
+          - org.libreoffice.LibreOffice
       - scope: user # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
