add pretty name fro LightOS

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -46,3 +46,8 @@ modules:
       - scope: user # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
+  - type: os-release
+    properties:
+      ID: light_os
+      NAME: LightOS
+      PRETTY_NAME: LightOS Image
